Closed
Bug 394023
Opened 18 years ago
Closed 18 years ago
Insert of attributes not reflected in bound form controls
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jlc6, Assigned: msterlin)
References
Details
(Keywords: fixed1.8.1.12)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
Build Identifier: 2007-08-09-03-mozilla1.8
In some cases, when you add an attribute to an element, other expressions (such as for form controls) that reference the attribute are not updated.
Reproducible: Always
| Reporter | ||
Comment 1•18 years ago
|
||
When you activate the edit button next to an email address, the corresponding `person` element is marked for editing with an `s:selected` attribute; the edit group should refer to the "selected" `person` element, but it does not rebind to the newly selected `person` element. (Note that I am using XForms Buddy to verify that the attributes are actually being placed on the correct `person` element.) Also, note that the `xf:output` that counts the number of `s:selected` attributes is also not updated, and finally that the "Unselect all" button does not delete the `s:selected` attributes that are added using the edit button.
Assignee: nobody → msterlin
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•18 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•18 years ago
|
||
The namespace of an attribute was not considered when inserting an attribute so the actual name of the attribute that was inserted was 's:selected'. XPath however, recognizes s:selected as a namespace prefix + local name and did not match a node with an attribute whose local name was s:selected.
| Assignee | ||
Comment 3•18 years ago
|
||
Take into account namespaces when checking for duplicate attributes and inserting a new attribute.
Attachment #278689 -
Flags: review?(aaronr)
| Assignee | ||
Updated•18 years ago
|
Attachment #278689 -
Attachment is patch: true
Attachment #278689 -
Attachment mime type: application/octet-stream → text/plain
| Assignee | ||
Updated•18 years ago
|
Attachment #278689 -
Flags: review?(Olli.Pettay)
Attachment #278689 -
Flags: review?(aaronr) → review+
Updated•18 years ago
|
Attachment #278689 -
Flags: review?(Olli.Pettay) → review+
Comment 4•18 years ago
|
||
Comment on attachment 278689 [details] [diff] [review]
patch
Not sure if XForms patches need approval while in
M8 freeze. XForms is not part of the build.
Attachment #278689 -
Flags: approval1.9?
Comment 5•18 years ago
|
||
Comment on attachment 278689 [details] [diff] [review]
patch
According to mozilla.dev.planning, this doesn't need approval
Attachment #278689 -
Flags: approval1.9?
Comment 6•18 years ago
|
||
Checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
checked into 1.8 branch via bug 410239.
Keywords: fixed1.8.1.12
Whiteboard: xf-to-branch
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•