[XFORMS] Bug 394023, Insert of attributes not reflected in bound form controls, p=msterlin@us.ibm.com, r=aaronr,me, NPOTB